{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 27,
  "lineage": "72daafff-2e9d-cb35-8e12-f30dd40fcd0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df24e148fdb9f1d8",
            "arn": "arn:aws:ec2:us-west-2:953624708941:instance/i-006eaaf8892a76c1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006eaaf8892a76c1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e3d23b4fc977d1c",
            "private_dns": "ip-10-0-1-66.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-35-165-36-116.us-west-2.compute.amazonaws.com",
            "public_ip": "35.165.36.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edaf9bac06b0cdfc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3572ea20a9a7b67",
            "tags": {
              "Name": "WP_EC2"
            },
            "tags_all": {
              "Name": "WP_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2a90a78c51c96ed"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh_access",
            "aws_subnet.public_subnet",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:internet-gateway/igw-0e0b25394452294e1",
            "id": "igw-0e0b25394452294e1",
            "owner_id": "953624708941",
            "tags": {
              "Name": "internet gateway"
            },
            "tags_all": {
              "Name": "internet gateway"
            },
            "vpc_id": "vpc-068a816658784d016"
          },
          "dependencies": [
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0a31433c273a20874",
            "network_interface_id": "eni-06aa90eedfefb7ad4",
            "private_ip": "10.0.2.62",
            "subnet_id": "subnet-069ced967a5c0f06a",
            "tags": {
              "Name": "nat gateway"
            },
            "tags_all": {
              "Name": "nat gateway"
            }
          },
          "dependencies": [
            "aws_subnet.private_subnet_1",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:route-table/rtb-02c34e71f1812c7e0",
            "id": "rtb-02c34e71f1812c7e0",
            "owner_id": "953624708941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a31433c273a20874",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table"
            },
            "tags_all": {
              "Name": "private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a816658784d016"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:route-table/rtb-0a44c7ab5a7ffd397",
            "id": "rtb-0a44c7ab5a7ffd397",
            "owner_id": "953624708941",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0b25394452294e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route table"
            },
            "tags_all": {
              "Name": "public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a816658784d016"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fd9d51ca8653169",
            "route_table_id": "rtb-02c34e71f1812c7e0",
            "subnet_id": "subnet-069ced967a5c0f06a"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f595d4b6c00bb421",
            "route_table_id": "rtb-02c34e71f1812c7e0",
            "subnet_id": "subnet-063dc623b73862425"
          },
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc9e928463a39019",
            "route_table_id": "rtb-0a44c7ab5a7ffd397",
            "subnet_id": "subnet-0d3572ea20a9a7b67"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_aurora_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:security-group/sg-0dcee612c8e4df3cb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dcee612c8e4df3cb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f2a90a78c51c96ed"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_aurora_access",
            "name_prefix": "",
            "owner_id": "953624708941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aurora-stack-allow-aurora-MySQL"
            },
            "tags_all": {
              "Name": "aurora-stack-allow-aurora-MySQL"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a816658784d016"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_http_ssh_access",
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:security-group/sg-0f2a90a78c51c96ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0f2a90a78c51c96ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_http__ssh_access",
            "name_prefix": "",
            "owner_id": "953624708941",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http__ssh_access"
            },
            "tags_all": {
              "Name": "allow_http__ssh_access"
            },
            "timeouts": null,
            "vpc_id": "vpc-068a816658784d016"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:subnet/subnet-069ced967a5c0f06a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069ced967a5c0f06a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953624708941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nf_private_1"
            },
            "tags_all": {
              "Name": "nf_private_1"
            },
            "vpc_id": "vpc-068a816658784d016"
          },
          "dependencies": [
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:subnet/subnet-063dc623b73862425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063dc623b73862425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953624708941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nf_private_2"
            },
            "tags_all": {
              "Name": "nf_private_2"
            },
            "vpc_id": "vpc-068a816658784d016"
          },
          "dependencies": [
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:subnet/subnet-0d3572ea20a9a7b67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3572ea20a9a7b67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "953624708941",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nf_public"
            },
            "tags_all": {
              "Name": "nf_public"
            },
            "vpc_id": "vpc-068a816658784d016"
          },
          "dependencies": [
            "aws_vpc.nf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:953624708941:vpc/vpc-068a816658784d016",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018b36b827be47405",
            "default_route_table_id": "rtb-017da88ddbe3b1546",
            "default_security_group_id": "sg-05d6f03b49c3fb2ff",
            "dhcp_options_id": "dopt-0c0b9ffbb1feaa03a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068a816658784d016",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017da88ddbe3b1546",
            "owner_id": "953624708941",
            "tags": {
              "Name": "nf_vpc"
            },
            "tags_all": {
              "Name": "nf_vpc"
            }
          }
        }
      ]
    }
  ]
}